--- a/lib/jasmine.css
+++ b/lib/jasmine.css
@@ -132,10 +132,12 @@ body {
 }
 
 .resultMessage > table {
+  background-color: white;
   width: 100%;
   font-size: .8em;
-  padding: 0;
-  margin: 0;
+  padding: .5em;
+  margin: .5em;
+  border: 1px solid black;
 }
 
 .resultMessage > table > tr > th, .resultMessage > table > tr > td {
